#pragma once

enum class GameStyle 
{
    Classic,
    ExtendClassic,
    RandomShot
};