@startuml game

!define DARKBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

class Player <<(S, #FFFF00) Struct >>
{
    + id : uint
    + points : uint
}

class GameStyle <<(E, #00FF00) Enum >>
{
    Classic
    ExtendClassic
    RandomShot
}

class Game
{
    + Game()
    + Game(GameStyle)
    + Game(GameSettings)
    + addPlayer(id) : void
    + playingPlayerScoredPoints(points) : void
    + processGame() : void
    + outputGame() : GameSettings
    + isEnd() : bool 
    + nextPlayer() : void
    + buttonDelay() : void

    * enum State {PLAY, STOP, NEXT_PLAYER};

    - mPlayers : queue
    - mWinners : queue
    - mModeGame : ModeGame*
    - mStyle : GameStyle
    - mGameState : State
}

Player --* "inf" Game
GameStyle ..> Game

class Round <<(S, #FFFF00) Struct >>
{
    + attempts : uint
    + scored_points : uint
}

class ModeGame << (B, #FF0000) Base >>
{
    + createPlayer(id) : Player
    + isNextPlayer() : bool 
    + processPlayerScore(&player, score) : void
    + isPlayerWin(player) : bool
    + nextRound() : void
    + getRound() : Round

    - mRound : Round
}

Player ..> ModeGame
ModeGame --* "1" Game
Round --* "1" ModeGame

class ClassicGame extends ModeGame
{
    + ClassicGame()
    + createPlayer(id) : Player
    + isNextPlayer() : bool 
    + processPlayerScore(&player, score) : void
    + isPlayerWin(player) : bool
    + nextRound() : void
}   

class ExtendClassicMode extends ClassicGame
{
    + ExtendClassicGame();
    + Player createPlayer(id) : Player
}

class RandomShotMode extends ModeGame
{
    + RandomShotMode()
    + createPlayer(id) : Player
    + isNextPlayer() : bool 
    + processPlayerScore(&player, score) : void
    + isPlayerWin(player) : bool
    + nextRound() : void

    - generateRandomNumber() : uint

    - mRandomShot : uint
}

class GameSettings
{
    + style : GameStyle
    + round : Round
    + players : std::deque<Player>
    + winners : std::deque<Player>

    + GameSettings()
    + GameSettings(nlohmann::json)
    + output() : nlohmann::json
    + input(nlohmann::json) : void 
}

GameSettings ..> Game
Round --* GameSettings

@enduml